--- a/src/template.html
+++ b/src/template.html
@@ -39,7 +39,17 @@
     <!--Rodape-->
     <footer class="m-0 d-block bg-primary">
         <div class="m-0 container-fluid pt-1 mt-2">
-            <p>Footer</p>
+            <div class="payments">
+              <img src="paypal.png" alt="PayPal">
+              <img src="visa.png" alt="Visa">
+              <img src="mastercard.png" alt="Mastercard">
+            </div>
+            <div class="contact">
+              <a href="https://www.instagram.com/seuinstagram/" target="_blank">@LavaDrive<i class="instagram"></i></a>
+              <a href="tel:+5511987654321"><i class="phone">(31) 3392-1187</i></a>
+              <a href="mailto:seuemail@gmail.com">lavadrive@gmail.com<i class="envelope"></i></a>
+            </div>
+            <div class="empty"></div>
         </div>
     </footer>
 
