Modificações na parte de pagamentos.
Adicionando mais um método de pagamento no template.

--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,7 @@
               <img src="paypal.png" alt="PayPal">
               <img src="visa.png" alt="Visa">
               <img src="mastercard.png" alt="Mastercard">
+              <img src="nubank.jpg" alt="Nubank">
             </div>
             <div class="contact">
               <a href="https://www.instagram.com/seuinstagram/" target="_blank">@LavaDrive<i class="instagram"></i></a>
