Adicionando os links rápidos ao rodapé da página.

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,8 @@
     <!--Bootstrap (CSS)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <!--FontAwesome-->
+    <script src="https://kit.fontawesome.com/ee6502c5bc.js" crossorigin="anonymous"></script>
 
 </head>
 
@@ -23,6 +25,7 @@
               <button type="button" class="btn btn-outline-light">Inicio</button>
               <button type="button" class="btn btn-outline-light">Perfil</button>
               <button type="button" class="btn btn-outline-light">Agendar</button>
+              <button type="button" class="btn btn-outline-light">Login</button>
           </div>
           </div>
         </nav>
@@ -37,19 +40,31 @@
     </main>
 
     <!--Rodape-->
-    <footer class="m-0 d-block bg-primary">
+    <footer class="m-0 d-block bg-secondary">
         <div class="m-0 container-fluid pt-1 mt-2">
             <div class="payments">
-              <img src="paypal.png" alt="PayPal">
-              <img src="visa.png" alt="Visa">
-              <img src="mastercard.png" alt="Mastercard">
+              <ul>
+                <li><a href="#"></a><i class="fa-brands fa-cc-visa fs-3" style="color: #000000;"></i></li>
+                <li><a href="#"></a><i class="fa-brands fa-paypal fs-3" style="color: #000000;"></i></li>
+                <li><a href="#"></a><i class="fa-brands fa-cc-mastercard fs-3" style="color: #000000;"></i></li>
+                <li><a href="#"></a><i class="fa-brands fa-pix fs-3" style="color: #000000;"></i></li>
+                <li><a href="#"></a><i class="fa-brands fa-cc-diners-club fs-3" style="color: #000000;"></i></li>
+              </ul>
             </div>
             <div class="contact">
               <a href="https://www.instagram.com/seuinstagram/" target="_blank">@LavaDrive<i class="instagram"></i></a>
               <a href="tel:+5511987654321"><i class="phone">(31) 3392-1187</i></a>
               <a href="mailto:seuemail@gmail.com">lavadrive@gmail.com<i class="envelope"></i></a>
             </div>
-            <div class="empty"></div>
+            <div class="links p-3">
+              <ul class="text-white">
+                <li><a href="#">Quem somos</a></li>
+                <li><a href="#">Ajuda</a></li>
+                <li><a href="#">Dúvidas frequentes</a></li>
+                <li><a href="#">Termos de privacidade</a></li>
+              </ul>
+
+            </div>
         </div>
     </footer>
 
