--- a/src/template.html
+++ b/src/template.html
@@ -32,7 +32,7 @@
 
     </header>
 
-    <!--Conteudo-->
+    <!--Conteudos-->
     <main class="m-0 d-block">
         <div class="m-0 container-fluid pt-1 mt-2">
             <p>Conteúdo da pagina</p>
