Alterações e Js da tela de agendamento

--- a/src/template.html
+++ b/src/template.html
@@ -49,7 +49,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -63,7 +63,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -80,7 +80,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
