--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -3,8 +3,8 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template Lava Drive</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Agendamento Lava Drive</title>
 
   <!--Style CSS-->
   <link href="Estilos/Agendamento.css" rel="stylesheet" type="text/css" />
@@ -24,7 +24,7 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded"></a>
+        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -43,10 +43,10 @@
   <main class="m-0 d-block">
 
     <!--Informações do carro-->
-    <div class="row container-fluid justify-content-center">
+    <div class="row container-fluid justify-content-center my-4">
 
       <!--Informações do Carro-->
-      <div class="col-5 mx-4 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-5 mx-0 mx-lg-4 ms-4 ms-lg-0 pt-1 border text-center rounded">
         <h4>Veículo</h4>
         <div class="mb-3">
 
@@ -65,15 +65,15 @@
           </div>
 
           <div class="d-flex justify-content-center mt-2">
-            <input class="form-control text-center border-secondary" type="search" placeholder="Responsavel pelo Veículo"
-              aria-label="Search" style="width: 20rem;">
+            <input class="form-control text-center border-secondary" type="search"
+              placeholder="Responsavel pelo Veículo" aria-label="Search" style="width: 20rem;">
           </div>
 
         </div>
       </div>
 
       <!--Campo de Observações-->
-      <div class="col-5 mx-4 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-5 mx-0 mx-lg-4 ms-4 ms-lg-0pt-1 border text-center rounded">
         <h4>Observações</h4>
         <textarea class="form-control mb-3 obs" id="exampleFormControlTextarea1" rows="5"></textarea>
       </div>
@@ -84,25 +84,25 @@
     <div class="row container-fluid justify-content-center">
 
       <!--Limpezas-->
-      <div class="col-11 mx-4 pt-1 my-2 border text-center row rounded">
+      <div class="col-12 col-lg-11 ms-3 ms-lg-0 pt-1 my-2 border text-center row rounded">
         <h4>Tipo de limpeza</h4>
-        
-        <div class="col-6 mb-3">
-          <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off">
-          <label class="btn btn-light border mt-2" for="option1" style="width: 32rem;">Limpeza Rapida</label>
+
+        <div class="col-12 col-lg-6 mb-3">
+          <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="limpeza(1)">
+          <label class="btn btn-light border mt-2" for="option1" style="width: 100%;">Limpeza Rapida</label>
           <br>
-          <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" checked>
-          <label class="btn btn-light border mt-2" for="option2" style="width: 32rem;">Limpeza Normal</label>
+          <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" checked onclick="limpeza(2)">
+          <label class="btn btn-light border mt-2" for="option2" style="width: 100%;">Limpeza Normal</label>
           <br>
-          <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
-          <label class="btn btn-light border mt-2" for="option4" style="width: 32rem;">Limpeza Completa</label>
+          <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" onclick="limpeza(3)">
+          <label class="btn btn-light border mt-2" for="option3" style="width: 100%;">Limpeza Completa</label>
         </div>
 
         <!--Descrição-->
-        <div class="col-6 border mb-3 rounded">
-          <h6>Limpeza Normal</h6>
-          <p>limpeza nas maquinas com enxague automatico, pinheiro aromatico, aspiração completa, hidratação do banco e
-            pretinho no pneu</p>
+        <div class="col-12 col-lg-6 border mb-3 rounded">
+          <h6 id="limpTitle">Limpeza Normal</h6>
+          <p id="limpDesc">Limpeza nas maquinas com enxague automatico, Pinheiro aromatico, Aspiração completa, Hidratação do banco e
+            Pretinho no pneu</p>
         </div>
 
       </div>
@@ -111,7 +111,7 @@
 
     <!--Dia-->
     <div class="row container-fluid justify-content-center">
-      <div class="col-5 mx-4 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Data</h4>
 
       </div>
@@ -119,20 +119,33 @@
 
     <!--Horarios-->
     <div class="row container-fluid justify-content-center">
-      <div class="col-5 mx-4 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Horarios</h4>
         <div class="mb-3">
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">7:00h - 8:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">9:00h - 9:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">10:00h - 10:50h</button>
 
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">11:00h - 11:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">13:00h - 13:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">14:00h - 14:50h</button>
+          <input type="radio" class="btn-check" name="time" id="time1" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time1" style="width: 10rem;">7:00h - 8:50h</label>
 
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">15:00h - 15:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">16:00h - 16:50h</button>
-          <button class="my-1 btn btn-light border" style="width: 10rem;" type="button">17:00h - 17:50h</button>
+          <input type="radio" class="btn-check" name="time" id="time2" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time2" style="width: 10rem;">9:00h - 9:50h</label>
+          
+          <input type="radio" class="btn-check" name="time" id="time3" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time3" style="width: 10rem;">10:00h - 10:50h</label>
+
+          <input type="radio" class="btn-check" name="time" id="time4" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time4" style="width: 10rem;">11:00h - 11:50h</label>
+          <input type="radio" class="btn-check" name="time" id="time5" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time5" style="width: 10rem;">13:00h - 13:50h</label>
+          <input type="radio" class="btn-check" name="time" id="time6" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time6" style="width: 10rem;">14:00h - 14:50h</label>
+
+          <input type="radio" class="btn-check" name="time" id="time7" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time7" style="width: 10rem;">15:00h - 15:50h</label>
+          <input type="radio" class="btn-check" name="time" id="time8" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time8" style="width: 10rem;">16:00h - 16:50h</label>
+          <input type="radio" class="btn-check" name="time" id="time9" autocomplete="off">
+          <label class="btn btn-light border my-1" for="time9" style="width: 10rem;">17:00h - 17:50h</label>
+
         </div>
 
       </div>
@@ -140,7 +153,7 @@
 
     <!--Finalizar-->
     <div class="row container-fluid justify-content-center">
-      <div class="col-5 mx-4 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Finalizar</h4>
         <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Finalizar</button>
         <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Cancelar</button>
@@ -155,7 +168,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
@@ -169,7 +182,7 @@
       </div>
 
       <!--Contatos-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Métodos de contato</p>
@@ -186,7 +199,7 @@
       </div>
 
       <!--Outros-->
-      <div class="col-4">
+      <div class="col-12 col-lg-4">
         <ul class="payList">
           <li>
             <p>Outros links úteis</p>
@@ -211,6 +224,8 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
+  <!--Script da tela de agendamento-->
+  <script src="Agendamento.js"></script>
 </body>
 
 </html>
