--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -39,19 +39,23 @@
   </header>
 
   <!--Conteudos-->
+
+  <!--Tipo de veículo-->
   <main class="m-0 d-block p-3">
 
-    <div class="dropdown">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Tipo de veículo</button>
-        <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="#">Hatch</a></li>
-          <li><a class="dropdown-item" href="#">Sedan</a></li>
-          <li><a class="dropdown-item" href="#">SUV</a></li>
-          <li><a class="dropdown-item" href="#">Picape / caminhonete</a></li>
-          <li><a class="dropdown-item" href="#">Motocicleta</a></li>
-          <li><a class="dropdown-item" href="#">Outro</a></li>
-        </ul>
-      </div>
+    <div class="d-flex justify-content-center text-center mt-2">
+      <select class="form-select border-secondary text-center" style="width: 20rem;">
+        <option selected>Categoria do Veículo</option>
+        <option value="1">Hatch</option>
+        <option value="2">Sedan</option>
+        <option value="3">SUV</option>
+        <option value="4">Picape/Caminhonete</option>
+        <option value="5">Motocicleta</option>
+        <option value="6">Outro</option>
+      </select>
+    </div>
+
+    <!--Info do veículo-->
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Modelo:</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Jeep Compass">
@@ -68,7 +72,7 @@
     </div>
 
     <button>Salvar dados do veículo</button>
-    <button type="button" class="btn btn-secondary">Criar conta</button>
+    <button type="button" class="btn btn-secondary">Adicionar</button>
 
   </main>
 
