--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -31,7 +31,8 @@
           <button type="button" class="btn btn-outline-light">Início</button>
           <button type="button" class="btn btn-outline-light">Perfil</button>
           <button type="button" class="btn btn-outline-light" disabled>Agendar</button>
-          <button type="button" class="btn btn-outline-light">Login</button>
+          <button type="button" class="btn btn-outline-light"
+            onclick="window.location.href = 'Login.html'">Login</button>
         </div>
 
       </div>
@@ -52,21 +53,17 @@
 
           <div class="d-flex justify-content-center">
             <input class="form-control text-center border-secondary" type="search" placeholder="Placa do Veículo"
-              aria-label="Search" style="width: 20rem;">
+              aria-label="Search" style="width: 20rem;" disabled>
           </div>
 
-          <div class="d-flex justify-content-center text-center mt-2">
-            <select class="form-select border-secondary text-center" style="width: 20rem;">
-              <option selected>Categoria do Veículo</option>
-              <option value="1">Veículo Pequeno</option>
-              <option value="2">Veículo Medio</option>
-              <option value="3">Veículo Grande</option>
-            </select>
+          <div class="d-flex justify-content-center mt-2">
+            <input class="form-control text-center border-secondary" type="search" placeholder="Categoria do Veículo"
+              aria-label="Search" style="width: 20rem;" disabled>
           </div>
 
           <div class="d-flex justify-content-center mt-2">
             <input class="form-control text-center border-secondary" type="search"
-              placeholder="Responsavel pelo Veículo" aria-label="Search" style="width: 20rem;">
+              placeholder="Responsavel pelo Veículo" aria-label="Search" style="width: 20rem;" disabled>
           </div>
 
         </div>
@@ -91,7 +88,8 @@
           <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="limpeza(1)">
           <label class="btn btn-light border mt-2" for="option1" style="width: 100%;">Limpeza Rapida</label>
           <br>
-          <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" checked onclick="limpeza(2)">
+          <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" checked
+            onclick="limpeza(2)">
           <label class="btn btn-light border mt-2" for="option2" style="width: 100%;">Limpeza Normal</label>
           <br>
           <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" onclick="limpeza(3)">
@@ -100,8 +98,9 @@
 
         <!--Descrição-->
         <div class="col-12 col-lg-6 border mb-3 rounded">
-          <h6 id="limpTitle">Limpeza Normal</h6>
-          <p id="limpDesc">Limpeza nas maquinas com enxague automatico, Pinheiro aromatico, Aspiração completa, Hidratação do banco e
+          <h6 id="limpTitle" class="pt-4">Limpeza Normal</h6>
+          <p id="limpDesc">Limpeza nas maquinas com enxague automatico, Pinheiro aromatico, Aspiração completa,
+            Hidratação do banco e
             Pretinho no pneu</p>
         </div>
 
@@ -128,21 +127,25 @@
 
           <input type="radio" class="btn-check" name="time" id="time2" autocomplete="off">
           <label class="btn btn-light border my-1" for="time2" style="width: 10rem;">9:00h - 9:50h</label>
-          
+
           <input type="radio" class="btn-check" name="time" id="time3" autocomplete="off">
           <label class="btn btn-light border my-1" for="time3" style="width: 10rem;">10:00h - 10:50h</label>
 
           <input type="radio" class="btn-check" name="time" id="time4" autocomplete="off">
           <label class="btn btn-light border my-1" for="time4" style="width: 10rem;">11:00h - 11:50h</label>
+
           <input type="radio" class="btn-check" name="time" id="time5" autocomplete="off">
           <label class="btn btn-light border my-1" for="time5" style="width: 10rem;">13:00h - 13:50h</label>
+
           <input type="radio" class="btn-check" name="time" id="time6" autocomplete="off">
           <label class="btn btn-light border my-1" for="time6" style="width: 10rem;">14:00h - 14:50h</label>
 
           <input type="radio" class="btn-check" name="time" id="time7" autocomplete="off">
           <label class="btn btn-light border my-1" for="time7" style="width: 10rem;">15:00h - 15:50h</label>
+
           <input type="radio" class="btn-check" name="time" id="time8" autocomplete="off">
           <label class="btn btn-light border my-1" for="time8" style="width: 10rem;">16:00h - 16:50h</label>
+
           <input type="radio" class="btn-check" name="time" id="time9" autocomplete="off">
           <label class="btn btn-light border my-1" for="time9" style="width: 10rem;">17:00h - 17:50h</label>
 
@@ -155,6 +158,14 @@
     <div class="row container-fluid justify-content-center">
       <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Finalizar</h4>
+
+        <div class="d-flex justify-content-center">
+          <div class="form-check form-switch" style="width: 15rem;">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <label class="form-check-label" for="flexSwitchCheckDefault">Pagamento Adiantado</label>
+          </div>
+        </div>
+
         <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Finalizar</button>
         <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Cancelar</button>
       </div>
@@ -225,7 +236,7 @@
     integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
     crossorigin="anonymous"></script>
   <!--Script da tela de agendamento-->
-  <script src="Agendamento.js"></script>
+  <script src="Scripts/Agendamento.js"></script>
 </body>
 
 </html>
