Melhorando a página de cadastro de carros

--- a/src/template.html
+++ b/src/template.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded"></a>
+        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
