--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -23,7 +23,7 @@
       <div class="container-fluid">
 
         <!--Logo-->
-        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded"></a>
+        <a href="#"><img src="img/lavaDriveLogo.png" class="rounded" style="width: 80%;"></a>
 
         <!--Opções-->
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
@@ -56,23 +56,27 @@
     </div>
 
     <!--Info do veículo-->
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Modelo:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Jeep Compass">
-    </div>
+    <div class="container-fluid">
+      <div class="row border border-black border-2 rounded-3 m-3 p-2">
+        <div class="mb-3 justify-content-center">
+          <label for="exampleFormControlInput1" class="form-label">Modelo:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Jeep Compass">
+        </div>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Placa:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: ABC1C34">
-    </div>
+        <div class="mb-3 justify-content-center">
+          <label for="exampleFormControlInput1" class="form-label">Placa:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: ABC1C34">
+        </div>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Cor (Opcional):</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Branco">
-    </div>
+        <div class="mb-3 justify-content-center">
+          <label for="exampleFormControlInput1" class="form-label">Cor (Opcional):</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Branco">
+        </div>
 
-    <button>Salvar dados do veículo</button>
-    <button type="button" class="btn btn-secondary">Adicionar</button>
+        <input type="checkbox" class="form-check-input" id="exampleCheck1"> Salvar dados do veículo
+        <button type="button" class="flex-row mb-3 btn btn-secondary">Adicionar</button>
+      </div>
+    </div>
 
   </main>
 
@@ -82,7 +86,7 @@
     <div class="m-0 mt-2 container-fluid bg-blue text-center row">
 
       <!--Metodos de pagamento-->
-      <div class="col-12 col-lg-4">
+      <div class="col-12 col-lg-4 ">
         <ul class="payList">
           <li>
             <p>Métodos de pagamento</p>
