--- a/src/template.html
+++ b/src/template.html
@@ -29,8 +29,8 @@
         <div class="btn-group d-flex" role="group" aria-label="Basic example">
           <button type="button" class="btn btn-outline-light">Início</button>
           <button type="button" class="btn btn-outline-light">Perfil</button>
-          <button type="button" class="btn btn-outline-light">Agendar</button>
-          <button type="button" class="btn btn-outline-light">Login</button>
+          <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+                    <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Login.html'">Login</button>
         </div>
 
       </div>
