Adicionando a tela de perfil

--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -84,7 +84,7 @@
       <div class="col-12 col-lg-11 ms-3 ms-lg-0 pt-1 my-2 border text-center row rounded">
         <h4>Tipo de limpeza</h4>
 
-        <div class="col-12 col-lg-6 mb-3">
+        <div class="col-12 col-lg-4 offset-lg-1 mb-3">
           <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="limpeza(1)">
           <label class="btn btn-light border mt-2" for="option1" style="width: 100%;">Limpeza Rapida</label>
           <br>
@@ -97,7 +97,7 @@
         </div>
 
         <!--Descrição-->
-        <div class="col-12 col-lg-6 border mb-3 rounded">
+        <div class="col-12 col-lg-6 offset-lg-1 border mb-3 rounded">
           <h6 id="limpTitle" class="pt-4">Limpeza Normal</h6>
           <p id="limpDesc">Limpeza nas maquinas com enxague automatico, Pinheiro aromatico, Aspiração completa,
             Hidratação do banco e
@@ -108,11 +108,11 @@
 
     </div>
 
-    <!--Dia-->
+    <!--Dia--><!--To do: Calendario-->
     <div class="row container-fluid justify-content-center">
       <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Data</h4>
-
+        <p>// Calendario a ser adicionado//</p>
       </div>
     </div>
 
