--- a/src/Pagamento.html
+++ b/src/Pagamento.html
@@ -7,7 +7,7 @@
   <title>pagina de pagamento</title>
 
   <!--Style CSS-->
-  <link href="style.css" rel="stylesheet" type="text/css" />
+   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
    
   <!--Bootstrap (CSS)-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
