Adicionando PNG do Avatar Padrão, e algumas complementações e edições visuais

--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -40,33 +40,42 @@
 
   <!--Conteudos-->
   <main class="m-0 d-block p-3">
+    <h1>Cadastro do Usuário</h1>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Nome:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome e sobrenome">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
-    </div>
+    <div class="container-fluid">
+      <div class="row border border-black border-2 rounded-3 m-3 p-2">
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Senha:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
-    </div>
+        <img src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
+        <a href="#"><i class="fa-solid fa-pencil"></i> Editar foto de perfil</a>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Telefone:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="(DDD) 9 8765-4321">
-    </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Nome:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome e sobrenome">
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Email:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
+        </div>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Usuário:</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="lava_drive">
-    </div>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Senha:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
+        </div>
 
-    <button>Termos e Política de Privacidade</button>
-    <button type="button" class="btn btn-secondary">Criar conta</button>
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Telefone:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="(DDD) 9 8765-4321">
+        </div>
+
+        <div class="mb-3">
+          <label for="exampleFormControlInput1" class="form-label">Usuário:</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="lava_drive">
+        </div>
+
+        <input type="checkbox" class="form-check-input" id="exampleCheck1"> Salvar dados do veículo
+        <button type="button" class="flex-row mb-3 btn btn-secondary">Criar </button>
+      </div>
+    </div>
 
   </main>
 
