--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -39,25 +39,25 @@
   </header>
 
   <!--Conteudos-->
-
-  <!--Tipo de veículo-->
   <main class="m-0 d-block p-3">
+    <h1>Cadastro do Veículo</h1>
 
-    <div class="d-flex justify-content-center text-center mt-2">
-      <select class="form-select border-secondary text-center" style="width: 20rem;">
-        <option selected>Categoria do Veículo</option>
-        <option value="1">Hatch</option>
-        <option value="2">Sedan</option>
-        <option value="3">SUV</option>
-        <option value="4">Picape/Caminhonete</option>
-        <option value="5">Motocicleta</option>
-        <option value="6">Outro</option>
-      </select>
-    </div>
-
-    <!--Info do veículo-->
+     <!--Info do veículo-->
     <div class="container-fluid">
       <div class="row border border-black border-2 rounded-3 m-3 p-2">
+        <div class="d-flex justify-content-center text-center mt-2">
+          <select class="form-select border-secondary text-center" style="width: 20rem;">
+            <option selected>Categoria do Veículo</option>
+            <option value="1">Hatch</option>
+            <option value="2">Sedan</option>
+            <option value="3">SUV</option>
+            <option value="4">Picape/Caminhonete</option>
+            <option value="5">Motocicleta</option>
+            <option value="6">Outro</option>
+          </select>
+        </div>
+
+       <!--Info do veículo-->  
         <div class="mb-3 justify-content-center">
           <label for="exampleFormControlInput1" class="form-label">Modelo:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Jeep Compass">
