Ajustes nas telas de agendamento, avaliação e perfil e o javascript da tela de Perfil e pequenos ajustes no js da tela de Agendamento

--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Lava Drive</title>
+    <title>Avaliação</title>
 
     <!--Style CSS-->
     <link href="Estilos/Avaliacao.css" rel="stylesheet" type="text/css" />
