--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -161,12 +161,12 @@
 
         <div class="d-flex justify-content-center">
           <div class="form-check form-switch" style="width: 15rem;">
-            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
+            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" onchange="pagarAdiantado()">
             <label class="form-check-label" for="flexSwitchCheckDefault">Pagamento Adiantado</label>
           </div>
         </div>
 
-        <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Finalizar</button>
+        <button class="btn btn-light border mb-2" style="width: 10rem;" type="button" onclick="finalizar()">Finalizar</button>
         <button class="btn btn-light border mb-2" style="width: 10rem;" type="button">Cancelar</button>
       </div>
     </div>
