--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template Lava Drive</title>
+    <title>Perfil do Usuário</title>
 
     <!--Style CSS-->
     <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
@@ -49,22 +49,22 @@
             </div>
 
             <div class="col-11 col-lg-3 mx-2 mt-2 border rounded justify-content-center text-center">
-                <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" checked>
+                <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="opcoes(1)" checked>
                 <label class="btn btn-light border mt-4" for="option1" style="width: 80%;">Meus dados</label>
 
-                <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off">
+                <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" onclick="opcoes(2)">
                 <label class="btn btn-light border mt-4" for="option2" style="width: 80%;">Veiculo</label>
 
-                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
+                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" onclick="opcoes(3)">
                 <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Historico</label>
 
-                <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off">
+                <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" onclick="opcoes(4)">
                 <label class="btn btn-light border my-4" for="option4" style="width: 80%;">Excluir conta</label>
 
             </div>
 
 
-            <div class="col-11 col-lg-8 mx-4 mt-2 border rounded text-center">
+            <div id="tela" class="col-11 col-lg-8 mx-4 mt-2 border rounded text-center">
                 <img src="img/circulo cinza.png" style="width: 30%;">
 
                 <div class="d-flex justify-content-center my-3">
@@ -88,11 +88,11 @@
                 </div>
 
                 <div class="d-flex justify-content-center my-3">
-                    <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off">
-                    <label class="btn btn-light border mt-4 me-3" for="option3" style="width: 8rem;">Trocar senha</label>
+                    <input type="radio" class="btn-check" name="options" id="trocarSenha" autocomplete="off">
+                    <label class="btn btn-light border mt-4 me-3" for="trocarSenha" style="width: 8rem;">Trocar senha</label>
 
-                    <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" disabled>
-                    <label class="btn btn-light border mt-4 ms-3" for="option3" style="width: 8rem;">Salvar</label>
+                    <input type="radio" class="btn-check" name="options" id="salvar" autocomplete="off" disabled>
+                    <label class="btn btn-light border mt-4 ms-3" for="salvar" style="width: 8rem;">Salvar</label>
                 </div>
 
             </div>
@@ -159,6 +159,8 @@
         </div>
 
     </footer>
+
+    <script src="Scripts/Perfil.js"></script>
 
     <!--Bootstrap (Java)-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
