--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -44,9 +44,9 @@
 
      <!--Info do veículo-->
     <div class="container-fluid">
-      <div class="row border border-black border-2 rounded-3 m-3 p-2">
+      <div class="row border border-black border-2 rounded-4 m-3 p-2">
         <div class="d-flex justify-content-center text-center mt-2">
-          <select class="form-select border-secondary text-center" style="width: 20rem;">
+          <select class="form-select border-info text-center" style="width: 20rem;">
             <option selected>Categoria do Veículo</option>
             <option value="1">Hatch</option>
             <option value="2">Sedan</option>
@@ -74,7 +74,7 @@
         </div>
 
         <input type="checkbox" class="form-check-input" id="exampleCheck1"> Salvar dados do veículo
-        <button type="button" class="flex-row mb-3 btn btn-secondary">Adicionar</button>
+        <button type="button" class="mb-3 btn btn-outline-info">Adicionar</button>
       </div>
     </div>
 
