--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -43,37 +43,39 @@
     <h1>Cadastro do Usuário</h1>
 
     <div class="container-fluid">
-      <div class="row border border-black border-2 rounded-3 m-3 p-2">
+      <div class="border border-black border-2 rounded-4 m-3 p-2">
 
         <img src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
-        <a href="#"><i class="fa-solid fa-pencil"></i> Editar foto de perfil</a>
+        <p><a href="#"><i class="fa-solid fa-pencil"></i> Editar foto de perfil</a></p>
+        <p></p>
 
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Nome:</label>
+        <div class="mb-3 mx-2">
+          <label for="exampleFormControlInput1" class="form-label ms-2">Nome:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome e sobrenome">
         </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email:</label>
+        <div class="mb-3 mx-2">
+          <label for="exampleFormControlInput1" class="form-label ms-2">Email:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
         </div>
 
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Senha:</label>
+        <div class="mb-3 mx-2">
+          <label for="exampleFormControlInput1" class="form-label ms-2">Senha:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
         </div>
 
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Telefone:</label>
+        <div class="mb-3 mx-2">
+          <label for="exampleFormControlInput1" class="form-label ms-2">Telefone:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="(DDD) 9 8765-4321">
         </div>
 
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Usuário:</label>
+        <div class="mb-3 mx-2">
+          <label for="exampleFormControlInput1" class="form-label ms-2">Usuário:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="lava_drive">
         </div>
 
-        <input type="checkbox" class="form-check-input" id="exampleCheck1"> Salvar dados do veículo
-        <button type="button" class="flex-row mb-3 btn btn-secondary">Criar </button>
+        <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Salvar dados do veículo
+        <p></p>
+        <button type="button" class="m-2 btn btn-outline-info">Criar </button>
       </div>
     </div>
 
