Edicoes visuais (Bootstrap).

--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -73,8 +73,9 @@
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ex.: Branco">
         </div>
 
-        <input type="checkbox" class="form-check-input" id="exampleCheck1"> Salvar dados do veículo
-        <button type="button" class="mb-3 btn btn-outline-info">Adicionar</button>
+        <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Salvar dados do veículo
+        <p></p>
+        <button type="button" class="mb-2 btn btn-outline-info">Adicionar</button>
       </div>
     </div>
 
