Criação dos .html de "Dúvidas Frequentes", "Ajuda" e "Termos"

--- a/src/Avaliacao.html
+++ b/src/Avaliacao.html
@@ -31,8 +31,10 @@
                 <div class="btn-group d-flex" role="group" aria-label="Basic example">
                     <button type="button" class="btn btn-outline-light">Início</button>
                     <button type="button" class="btn btn-outline-light">Perfil</button>
-                    <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Agendamento.html'">Agendar</button>
-                    <button type="button" class="btn btn-outline-light" onclick="window.location.href = 'Login.html'">Login</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Agendamento.html'">Agendar</button>
+                    <button type="button" class="btn btn-outline-light"
+                        onclick="window.location.href = 'Login.html'">Login</button>
                 </div>
 
             </div>
