--- a/src/Termos.html
+++ b/src/Termos.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Template Lava Drive</title>
+  <title>Termos</title>
 
   <!--Style CSS-->
   <link href="Estilos/template.css" rel="stylesheet" type="text/css" />
@@ -42,7 +42,7 @@
 
   <!--Conteudos-->
   <main class="m-0 d-block">
-
+    <h1>Termos</h1>
   </main>
 
   <!--Rodape-->
