--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -45,9 +45,11 @@
     <div class="container-fluid">
       <div class="border border-black border-2 rounded-4 m-3 p-2">
 
-        <img src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
-        <p><a href="#"><i class="fa-solid fa-pencil"></i> Editar foto de perfil</a></p>
-        <p></p>
+        <div class="text-center">
+          <img src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
+          <p><a href="#"><i class="fa-solid fa-pencil"></i> Editar foto de perfil</a></p>
+          <p></p>
+        </div>
 
         <div class="mb-3 mx-2">
           <label for="exampleFormControlInput1" class="form-label ms-2">Nome:</label>
@@ -75,7 +77,7 @@
 
         <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Salvar dados do veículo
         <p></p>
-        <button type="button" class="m-2 btn btn-outline-info">Criar </button>
+        <button type="button" class="m-2 btn btn-outline-info text-center">Criar </button>
       </div>
     </div>
 
