--- a/src/Perfil.html
+++ b/src/Perfil.html
@@ -49,16 +49,20 @@
             </div>
 
             <div class="col-11 col-lg-3 mx-2 mt-2 border rounded justify-content-center text-center">
-                <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="opcoes(1)" checked>
+                <input type="radio" class="btn-check" name="options" id="option1" autocomplete="off" onclick="opcoes(1)"
+                    checked>
                 <label class="btn btn-light border mt-4" for="option1" style="width: 80%;">Meus dados</label>
 
-                <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off" onclick="opcoes(2)">
+                <input type="radio" class="btn-check" name="options" id="option2" autocomplete="off"
+                    onclick="opcoes(2)">
                 <label class="btn btn-light border mt-4" for="option2" style="width: 80%;">Veiculo</label>
 
-                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off" onclick="opcoes(3)">
+                <input type="radio" class="btn-check" name="options" id="option3" autocomplete="off"
+                    onclick="opcoes(3)">
                 <label class="btn btn-light border mt-4" for="option3" style="width: 80%;">Historico</label>
 
-                <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off" onclick="opcoes(4)">
+                <input type="radio" class="btn-check" name="options" id="option4" autocomplete="off"
+                    onclick="opcoes(4)">
                 <label class="btn btn-light border my-4" for="option4" style="width: 80%;">Excluir conta</label>
 
             </div>
@@ -89,7 +93,8 @@
 
                 <div class="d-flex justify-content-center my-3">
                     <input type="radio" class="btn-check" name="options" id="trocarSenha" autocomplete="off">
-                    <label class="btn btn-light border mt-4 me-3" for="trocarSenha" style="width: 8rem;">Trocar senha</label>
+                    <label class="btn btn-light border mt-4 me-3" for="trocarSenha" style="width: 8rem;">Trocar
+                        senha</label>
 
                     <input type="radio" class="btn-check" name="options" id="salvar" autocomplete="off" disabled>
                     <label class="btn btn-light border mt-4 ms-3" for="salvar" style="width: 8rem;">Salvar</label>
