Alterações da tela de agendamento

--- a/src/Agendamento.html
+++ b/src/Agendamento.html
@@ -112,129 +112,54 @@
 
     <!--Dia-->
     <div class="row container-fluid justify-content-center">
-      <div class="col-12 col-lg-5 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
+      <div class="col-12 col-lg-11 ms-4 ms-lg-0 pt-1 my-2 border text-center rounded">
         <h4>Data</h4>
-        <div class="row rounded border-secondary justify-content-center">
-
-          <!--Teste 1-->
-          <!--
-          <input type="radio" class="btn-check" name="dia" id="dia1" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia1" style="width: 6rem;">
-            <p id="dayName0">Segunda</p>
-            <p id="day0">0</p>
+        <div class="row col-12 my-4 justify-content-center">
+          <input type="radio" class="btn-check" name="dia" id="dia11" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia11" style="width: 6rem;">
+            <p id="dayNameT0">Domingo</p>
+            <p id="dayT0">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia2" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia2" style="width: 6rem;">
-            <p id="dayName1">Terça</p>
-            <p id="day1">1</p>
+          <input type="radio" class="btn-check" name="dia" id="dia12" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia12" style="width: 6rem;">
+            <p id="dayNameT1">Segunda</p>
+            <p id="dayT1">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia3" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia3" style="width: 6rem;">
-            <p id="dayName2">Quarta</p>
-            <p id="day2">2</p>
+          <input type="radio" class="btn-check" name="dia" id="dia13" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia13" style="width: 6rem;">
+            <p id="dayNameT2">Terça</p>
+            <p id="dayT2">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia4" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia4" style="width: 6rem;">
-            <p id="dayName3">Quinta</p>
-            <p id="day3">3</p>
+          <input type="radio" class="btn-check" name="dia" id="dia14" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia14" style="width: 6rem;">
+            <p id="dayNameT3">Quarta</p>
+            <p id="dayT3">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia5" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia5" style="width: 6rem;">
-            <p id="dayName4">Sexta</p>
-            <p id="day4">4</p>
+          <input type="radio" class="btn-check" name="dia" id="dia15" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia15" style="width: 6rem;">
+            <p id="dayNameT4">Quinta</p>
+            <p id="dayT4">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia6" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia6" style="width: 6rem;">
-            <p id="dayName5">Sabado</p>
-            <p id="day5">5</p>
+          <input type="radio" class="btn-check" name="dia" id="dia16" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia16" style="width: 6rem;">
+            <p id="dayNameT5">Sexta</p>
+            <p id="dayT5">0</p>
           </label>
 
-          <input type="radio" class="btn-check" name="dia" id="dia7" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia7" style="width: 6rem;">
-            <p id="dayName6">Domingo</p>
-            <p id="day6">6</p>
+          <input type="radio" class="btn-check" name="dia" id="dia17" autocomplete="off">
+          <label class="btn btn-light border my-1 col-2 col-lg-1 m-1 border rounded" for="dia17" style="width: 6rem;">
+            <p id="dayNameT6">Sabado</p>
+            <p id="dayT6">0</p>
           </label>
-
-          <input type="radio" class="btn-check" name="dia" id="dia8" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia8" style="width: 6rem;">
-            <p id="dayName7">Segunda</p>
-            <p id="day7">7</p>
-          </label>
-
-          <input type="radio" class="btn-check" name="dia" id="dia9" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia9" style="width: 6rem;">
-            <p id="dayName8">Terça</p>
-            <p id="day8">8</p>
-          </label>
-
-          <input type="radio" class="btn-check" name="dia" id="dia10" autocomplete="off">
-          <label class="btn btn-light border my-1 col-2 m-1 border rounded" for="dia10" style="width: 6rem;">
-            <p id="dayName9">Quarta</p>
-            <p id="day9">9</p>
-          </label>
-           -->
-
-
-
-
-          <!--Teste 2-->
-          <div class="my-4">
-            <input type="radio" class="btn-check" name="dia" id="dia11" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia11" style="width: 6rem;">
-              <p id="dayNameT0">Domingo</p>
-              <p id="dayT0">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia12" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia12" style="width: 6rem;">
-              <p id="dayNameT1">Segunda</p>
-              <p id="dayT1">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia13" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia13" style="width: 6rem;">
-              <p id="dayNameT2">Terça</p>
-              <p id="dayT2">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia14" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia14" style="width: 6rem;">
-              <p id="dayNameT3">Quarta</p>
-              <p id="dayT3">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia15" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia15" style="width: 6rem;">
-              <p id="dayNameT4">Quinta</p>
-              <p id="dayT4">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia16" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia16" style="width: 6rem;">
-              <p id="dayNameT5">Sexta</p>
-              <p id="dayT5">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia17" autocomplete="off">
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia17" style="width: 6rem;">
-              <p id="dayNameT6">Sabado</p>
-              <p id="dayT6">0</p>
-            </label>
-
-            <input type="radio" class="btn-check" name="dia" id="dia17" autocomplete="off" disabled>
-            <label class="btn btn-light border my-1 col-1 m-1 border rounded" for="dia17" style="width: 6rem;">
-              <p id="dayNameT7">Domingo</p>
-              <p id="dayT7">0</p>
-            </label>
-          </div>
 
         </div>
       </div>
+
     </div>
 
     <!--Horarios-->
