Modificações finais na tela de login e pagamento.

--- a/src/Login.html
+++ b/src/Login.html
@@ -86,7 +86,7 @@
                 <button type="button" class="btn btn-outline-dark">Esqueci a senha</button>
 
                 <br>ㅤ </br>
-                <div class=" row d-flex justify-content-center align-content-center "> <a href="#"
+                <div class=" row d-flex justify-content-center align-content-center "> <a href="http://127.0.0.1:5500/pco-si-2023-1-p1-proj-web-t1-grupo-3-lavadrive/src/Agendamento.html"
                     class="btn btn-outline-dark col-4">Entrar</a> </div>
 
 
