Adicionando a página Dúvidas Frequentes e Ajuda

--- a/src/CadastroCarro.html
+++ b/src/CadastroCarro.html
@@ -75,7 +75,9 @@
 
         <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Salvar dados do veículo
         <p></p>
-        <button type="button" class="mb-2 btn btn-outline-info">Adicionar</button>
+        <div class="text-center">
+          <button type="button" class="mb-2 btn btn-outline-info">Adicionar</button>
+        </div>
       </div>
     </div>
 
@@ -123,10 +125,10 @@
           <li>
             <p>Outros links úteis</p>
           </li>
-          <li><a href="#" class="info">Quem somos</a></li>
-          <li><a href="#" class="info">Ajuda</a></li>
-          <li><a href="#" class="info">Dúvidas frequentes</a></li>
-          <li><a href="#" class="info">Termos de privacidade</a></li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
       </div>
 
