--- a/src/CadastroUsuário.html
+++ b/src/CadastroUsuário.html
@@ -43,7 +43,7 @@
     <h1>Cadastro do Usuário</h1>
 
     <div class="container-fluid">
-      <div class="border border-black border-2 rounded-4 m-3 p-2">
+      <div class="border border-black border-2 justify-content-center rounded-4 m-3 p-2">
 
         <div class="text-center">
           <img src="/src/img/AvatarPadrão.png" alt="perfil" style="width: 40%;">
@@ -51,33 +51,39 @@
           <p></p>
         </div>
 
+        <!--Nome-->
         <div class="mb-3 mx-2">
           <label for="exampleFormControlInput1" class="form-label ms-2">Nome:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nome e sobrenome">
         </div>
+        <!---Email-->
         <div class="mb-3 mx-2">
           <label for="exampleFormControlInput1" class="form-label ms-2">Email:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nome@exemplo.com">
         </div>
-
+        <!--Senha-->
         <div class="mb-3 mx-2">
           <label for="exampleFormControlInput1" class="form-label ms-2">Senha:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="">
         </div>
-
+        <!--Número-->
         <div class="mb-3 mx-2">
-          <label for="exampleFormControlInput1" class="form-label ms-2">Telefone:</label>
+          <label for="exampleFormControlInput1" class="form-label ms-2">Número:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="(DDD) 9 8765-4321">
         </div>
-
+        <!--Usuário-->
         <div class="mb-3 mx-2">
           <label for="exampleFormControlInput1" class="form-label ms-2">Usuário:</label>
           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="lava_drive">
         </div>
 
-        <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Salvar dados do veículo
+        <!--Botôes-->
+        <input type="checkbox" class="form-check-input ms-3 me-2 p-2" id="exampleCheck1"> Concordo com os termos de
+        privacidade
         <p></p>
-        <button type="button" class="m-2 btn btn-outline-info text-center">Criar </button>
+        <div class="text-center justify-content-center">
+          <button type="button" class="m-2 btn btn-outline-info text-center">Criar </button>
+        </div>
       </div>
     </div>
 
@@ -125,10 +131,10 @@
           <li>
             <p>Outros links úteis</p>
           </li>
-          <li><a href="#" class="info">Quem somos</a></li>
-          <li><a href="#" class="info">Ajuda</a></li>
-          <li><a href="#" class="info">Dúvidas frequentes</a></li>
-          <li><a href="#" class="info">Termos de privacidade</a></li>
+          <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+          <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+          <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
         </ul>
       </div>
 
