--- a/src/DúvidasAjuda.html
+++ b/src/DúvidasAjuda.html
@@ -42,9 +42,8 @@
 
     <!--Conteudos-->
     <main class="m-0 d-block">
-        <div id="duvidas">
-            <h1 class="">Dúvidas Frequentes</h1>
-            <p class="">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eveniet, ut.</p>
+        <div id="duvidas" class="p-2 m-1">
+            <h1 class="m-3">Dúvidas Frequentes</h1>
 
             <!--Dúvidas-->
             <div class="accordion" id="accordionPanelsStayOpenExample">
@@ -59,12 +58,10 @@
                     </h2>
                     <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show">
                         <div class="accordion-body">
-                            <strong>Recuração de senha.</strong> It is shown by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.teste</code>, though the transition does limit overflow.
+                            <strong>Recuperação de senha.</strong> Para recuperar sua senha, você deve ir na tela de
+                            Login
+                            e clicar no botão "Esqueci a senha", assim você será redirecionado para uma página onde
+                            poderá redefinir sua senha e usar uma nova.
                         </div>
                     </div>
                 </div>
@@ -79,12 +76,11 @@
                     </h2>
                     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>Agendamento da lmpeza.</strong> It is hidden by default, until
-                            the collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>Agendamento da lmpeza.</strong> Para agendar a limpeza do seu veículo, basta você
+                            clicar no botão "Agendar" (localizado no canto superior direito da página), que te levará
+                            para a página de agendamento. Lá, você pode agendar do seu jeito, podendo escolher a data, o
+                            horário, e o tipo de limpeza que você deseja, além de poder adiantar o pagamento e realizar
+                            observações caso queira.
                         </div>
                     </div>
                 </div>
@@ -99,12 +95,10 @@
                     </h2>
                     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>Pagamento adiantado.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>Pagamento adiantado.</strong> Para solicitar o pagamento adiantado da sua limpeza,
+                            você deve realizar o agendamento da limpeza desejada, e ao final do procedimento, você terá
+                            a opção para adiantar o pagamento, assim redirecionando-o à uma página para efetuar o
+                            processo de pagamento.
                         </div>
                     </div>
                 </div>
@@ -119,12 +113,10 @@
                     </h2>
                     <div id="panelsStayOpen-collapseFour" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>Perfil.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>Perfil.</strong> Para alterar o veículo, você deve, primeiro, adicionar as
+                            informações necessárias na página de cadastro de veículo. Feito o cadastro, você deve ir na
+                            página de agendamento, onde há uma opção que exibe o veículo selecionado e alterá-lo para o
+                            veículo desejado.
                         </div>
                     </div>
                 </div>
@@ -139,12 +131,9 @@
                     </h2>
                     <div id="panelsStayOpen-collapseFive" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>Observações.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>Observações.</strong> Ná página de agendamento, há um campo reservado para anotar
+                            todas as observações que você deseja. É importante ressaltar que essas observaçõs servem
+                            para que você nos dê algumas precauções que devemos tomar ao cuidar do seu veículo.
                         </div>
                     </div>
                 </div>
@@ -159,26 +148,24 @@
                     </h2>
                     <div id="panelsStayOpen-collapseSix" class="accordion-collapse collapse">
                         <div class="accordion-body">
-                            <strong>Formas de pagamento.</strong> It is hidden by default, until the
-                            collapse plugin adds the appropriate classes that we use to style each element. These
-                            classes control the overall appearance, as well as the showing and hiding via CSS
-                            transitions. You can modify any of this with custom CSS or overriding our default variables.
-                            It's also worth noting that just about any HTML can go within the
-                            <code>.accordion-body</code>, though the transition does limit overflow.
+                            <strong>Formas de pagamento.</strong> As formas de pagamento aceitas pela LavaDrive são:
+                            Cartão de crédito e de débito (bandeiras VISA e MasterCard), boleto, pix e PayPal.
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div id="ajuda">
-            <h1>Ajuda</h1>
-            <p>Caso nenhuma das "Dúvidas Frequentes" citadas anteriormente tenham sanada a sua pergunta</p>
+        <div id="ajuda" class="p-2 m-3 text-center justify-content-center">
+            <h1 class="p-2">Ajuda</h1>
+            <p class="m-3">Caso nenhuma das "Dúvidas Frequentes" citadas anteriormente tenham lhe respondido, por favor,
+                digite sua dúvida abaixo para que possamos te atender da melhor forma possível.</p>
 
-            <div class="col-12 col-lg-5 mx-0 mx-lg-4 ms-4 ms-lg-0 pt-1 border text-center rounded">
+            <div class="m-3 pt-1 border text-center rounded">
                 <h4>Digite sua dúvida.</h4>
-                <textarea class="form-control mb-3 obs" id="exampleFormControlTextarea1" rows="5"></textarea>
-              </div>
+                <textarea class="form-control mb-3 text-center obs" id="exampleFormControlTextarea1"
+                    rows="5"></textarea>
+            </div>
         </div>
 
     </main>
@@ -227,10 +214,10 @@
                     <li>
                         <p>Outros links úteis</p>
                     </li>
-                    <li><a href="#" class="info">Quem somos</a></li>
-                    <li><a href="#" class="info">Ajuda</a></li>
-                    <li><a href="#" class="info">Dúvidas frequentes</a></li>
-                    <li><a href="#" class="info">Termos de privacidade</a></li>
+                    <li><a href="QuemSomos.html" class="info">Quem somos</a></li>
+                    <li><a href="DúvidasAjuda.html" class="info">Ajuda</a></li>
+                    <li><a href="DúvidasAjuda.html" class="info">Dúvidas frequentes</a></li>
+                    <li><a href="termosdeprivacidade.html" class="info">Termos de privacidade</a></li>
                 </ul>
             </div>
 
